fixed contrast issue and added logo img

--- a/style.css
+++ b/style.css
@@ -9,20 +9,12 @@ body {
 /* Header with background color*/
 
 header {
-  background-image: url("coding-header.jpg");
-  background-size: cover;
-  margin-bottom: 30px;
-  margin-top: -40px;
-  height: 150px;
+  background-color: #44158f;
+  height: 10%;
 }
 
-header h1 {
-  color: white;
-  font-size: 48px;
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
-  padding-top: 30px;
-  margin-bottom: -15px;
+h1 {
+  color: #44158f;
 }
 
 /*mobile nav display*/
@@ -53,17 +45,19 @@ main {
   padding-top: 10px;
 }
 
-main h2 {
+main h1,
+h2 {
   font-family: Arial, Helvetica, sans-serif;
 }
 
 p {
+  font-weight: 350;
   font-size: 20px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 img {
-  max-width: 500px;
+  max-width: 400px;
 }
 /* groups */
 
@@ -99,7 +93,7 @@ img {
 }
 
 .background {
-  background: rgb(124, 80, 243);
+  background: #44158f;
   color: white;
 }
 
@@ -115,7 +109,7 @@ img {
 
 footer {
   height: 75px;
-  background: rgb(124, 80, 243);
+  background: #44158f;
   margin-bottom: -500px;
   color: white;
   margin-top: 20px;
@@ -143,16 +137,10 @@ footer h2 {
 /* media query 
 Desktop
 */
-@media all and (min-width: 700px) {
+@media all and (min-width: 800px) {
   header {
     display: flex;
     justify-content: space-between;
-  }
-
-  h1 {
-    margin: 14px 0 14px 20px;
-    padding-top: 0;
-    font-size: 42px;
   }
 
   header nav {
@@ -161,6 +149,10 @@ Desktop
   header ul {
     margin-top: 50px;
     font-size: 28px;
+  }
+
+  img.andrew-logo {
+    width: 800px;
   }
 
   .group {
@@ -186,7 +178,6 @@ Desktop
 
   footer {
     height: 100px;
-    background: rgb(124, 80, 243);
     margin-bottom: -200px;
     color: white;
     margin-top: 20px;
